password-vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
spec:
  ports:
  - name: bitwarden-api
    port: 8080
  - name: notifications
    port: 3012
