password-vault/bitwarden_rs.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: bitwarden
  name: password-vault
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-ingress
  namespace: password-vault
spec:
  selector:
    app: bitwarden
  ports:
  - name: bitwarden-api
    port: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bitwarden
  namespace: password-vault
  annotations:
    kubernetes.io/ingress.class: traefik-internal
#    traefik.ingress.kubernetes.io/frontend-entry-points: https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: bw.k8s.kilchhofer.info
    http:
      paths:
      - path: /
        backend:
          serviceName: bitwarden-ingress
          servicePort: bitwarden-api
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitwarden
  namespace: password-vault
spec:
  serviceName: bitwarden
  selector:
    matchLabels:
      app: bitwarden
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      securityContext:
        fsGroup: 33
        runAsUser: 33
      containers:
      - name: bitwarden
        image: bitwardenrs/server:1.10.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: bitwarden-persistent-storage
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: bitwarden-persistent-storage
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "1Gi"
      storageClassName: nfs-data
