password-vault/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bitwarden
  annotations:
    kubernetes.io/ingress.class: contour
    ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    projectcontour.io/response-timeout: 120s
spec:
  rules:
  - host: bw.tools.kilchhofer.info
    http:
      paths:
      - path: /
        backend:
          serviceName: bitwarden
          servicePort: bitwarden-api
      - path: /notifications/hub/negotiate
        backend:
          serviceName: bitwarden
          servicePort: bitwarden-api
      - path: /notifications/hub
        backend:
          serviceName: bitwarden
          servicePort: notifications
  tls:
  - hosts:
    - bw.tools.kilchhofer.info
    secretName: bitwarden-cert
